tests/errors/compiler/index_must_be_int/float_index.c
int main()
{
	int arr[2] = {1,2};
	float a = 1.0;
	printf("%i", arr[a]);	
	return 0;
}